feat: add authentication for endpoint and add custom error handler
