# src/dtos/loginRequestDto.ts
@@ -1,0 +1,4 @@
+export interface LoginRequestDto {
+  email: string;
+  password: string;
+}
