# src/dtos/registerRequestDto.ts
@@ -1,0 +1,4 @@
+export interface RegisterRequestDto {
+  email: string;
+  password: string;
+}
