# src/dtos/sendVerificationEmailRequestDto.ts
@@ -1,0 +1,4 @@
+export interface SendVerificationEmailRequestDto {
+  id: number;
+  email: string;
+}
